; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-cmos.c_cmos_irq_set_freq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-cmos.c_cmos_irq_set_freq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.cmos_rtc = type { i32 }

@ENXIO = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@rtc_lock = common dso_local global i32 0, align 4
@RTC_REF_CLCK_32KHZ = common dso_local global i32 0, align 4
@RTC_FREQ_SELECT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i32)* @cmos_irq_set_freq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmos_irq_set_freq(%struct.device* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.cmos_rtc*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = load %struct.device*, %struct.device** %4, align 8
  %10 = call %struct.cmos_rtc* @dev_get_drvdata(%struct.device* %9)
  store %struct.cmos_rtc* %10, %struct.cmos_rtc** %6, align 8
  %11 = load %struct.cmos_rtc*, %struct.cmos_rtc** %6, align 8
  %12 = getelementptr inbounds %struct.cmos_rtc, %struct.cmos_rtc* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @is_valid_irq(i32 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %2
  %17 = load i32, i32* @ENXIO, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %3, align 4
  br label %49

19:                                               ; preds = %2
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @is_power_of_2(i32 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %26, label %23

23:                                               ; preds = %19
  %24 = load i32, i32* @EINVAL, align 4
  %25 = sub nsw i32 0, %24
  store i32 %25, i32* %3, align 4
  br label %49

26:                                               ; preds = %19
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @ffs(i32 %27)
  store i32 %28, i32* %7, align 4
  %29 = load i32, i32* %7, align 4
  %30 = add nsw i32 %29, -1
  store i32 %30, i32* %7, align 4
  %31 = icmp sgt i32 %29, 16
  br i1 %31, label %32, label %35

32:                                               ; preds = %26
  %33 = load i32, i32* @EINVAL, align 4
  %34 = sub nsw i32 0, %33
  store i32 %34, i32* %3, align 4
  br label %49

35:                                               ; preds = %26
  %36 = load i32, i32* %7, align 4
  %37 = sub nsw i32 16, %36
  store i32 %37, i32* %7, align 4
  %38 = load i64, i64* %8, align 8
  %39 = call i32 @spin_lock_irqsave(i32* @rtc_lock, i64 %38)
  %40 = load i32, i32* %5, align 4
  %41 = call i32 @hpet_set_periodic_freq(i32 %40)
  %42 = load i32, i32* @RTC_REF_CLCK_32KHZ, align 4
  %43 = load i32, i32* %7, align 4
  %44 = or i32 %42, %43
  %45 = load i32, i32* @RTC_FREQ_SELECT, align 4
  %46 = call i32 @CMOS_WRITE(i32 %44, i32 %45)
  %47 = load i64, i64* %8, align 8
  %48 = call i32 @spin_unlock_irqrestore(i32* @rtc_lock, i64 %47)
  store i32 0, i32* %3, align 4
  br label %49

49:                                               ; preds = %35, %32, %23, %16
  %50 = load i32, i32* %3, align 4
  ret i32 %50
}

declare dso_local %struct.cmos_rtc* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @is_valid_irq(i32) #1

declare dso_local i32 @is_power_of_2(i32) #1

declare dso_local i32 @ffs(i32) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @hpet_set_periodic_freq(i32) #1

declare dso_local i32 @CMOS_WRITE(i32, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
